--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
         </div>
         <div id="scoreContainer" style="display: none"></div>
     </div>
-    <script src="quiz.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
