--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
                 <div class="choice" id="B" onclick="checkAnswer('B')"></div>
                 <div class="choice" id="C" onclick="checkAnswer('C')"></div>
             </div>
-            
-            <div id="progress"></div>
         </div>
-        <div id="scoreContainer" style="display: none"></div>
+        <div id="scoreContainer" style="display: none">Leaderboard!
+            <ul id="leaderboards"></ul>
+        </div>
     </div>
     <script src="script.js"></script>
 </body>
