7th commit- timer added

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <div id="container">
         <div id="start">Start Quiz!</div>
         <div id="quiz" style="display: none">
+            <div><span id="time">00:30</span></div>
             <div id="question"></div>
             <div id="choices">
                 <div class="choice" id="A" onclick="checkAnswer('A')"></div>
