8th commit - added restart button to leaderboard page

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         </div>
         <div id="scoreContainer" style="display: none">Leaderboard!
             <ul id="leaderboards"></ul>
+            <div id="restart">Click Here To Restart</div>
         </div>
     </div>
     <script src="script.js"></script>
